--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
+argh==0.25.0
+certifi==2018.11.29
+chardet==3.0.4
 Flask==0.10.1
+idna==2.8
+itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
-PyYAML==3.11
-Werkzeug==0.9.6
-argh==0.25.0
-itsdangerous==0.24
 pathtools==0.1.2
-requests==2.10.0
-robotframework>=2.8.5
-robotframework-requests==0.4.5
-robotframework-selenium2library==1.7.4
+PyYAML==3.11
+requests==2.21.0
+robotframework==3.1.1
+robotframework-requests==0.5.0
+robotframework-seleniumlibrary==3.3.1
+selenium==3.141.0
+tornado==5.1.1
+urllib3==1.24.1
 watchdog==0.8.0
-# wsgiref==0.1.2
+Werkzeug==0.9.6
