--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,20 @@
 language: python
 python:
-  - 2.7
+  - 3.6
 sudo: required
 dist: trusty
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-#      - chromium-chromedriver
+  chrome: stable
+cache: pip
 install:
   - pip install -r requirements.txt
-  - python setup.py develop
 before_script:
-  - wget "http://chromedriver.storage.googleapis.com/2.22/chromedriver_linux64.zip"
+  - wget "http://chromedriver.storage.googleapis.com/2.46/chromedriver_linux64.zip"
   - unzip chromedriver_linux64.zip
   - sudo mv chromedriver /usr/local/bin
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - sleep 3
+  - sleep 3 # give xvfb some time to start
 script:
-  - pybot -A tests/conf/default.args tests
+  - python -m unittest utests
+  - robot -A tests/conf/default.args tests
