--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ robotframework==3.1.1
 robotframework-requests==0.5.0
 robotframework-seleniumlibrary==3.3.1
 selenium==3.141.0
+SQLAlchemy==1.2.18
 tornado==5.1.1
 urllib3==1.24.1
 watchdog==0.8.0
