--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include README.md
-recursive-include rfhub/blueprints/doc/static *
-recursive-include rfhub/blueprints/doc/templates *.html
-recursive-include rfhub/blueprints/dashboard/templates *.html
-recursive-include rfhub/static *
-recursive-exclude rfhub *~ #*#
+recursive-include rfhub2/blueprints/doc/static *
+recursive-include rfhub2/blueprints/doc/templates *.html
+recursive-include rfhub2/blueprints/dashboard/templates *.html
+recursive-include rfhub2/static *
+recursive-exclude rfhub2 *~ #*#
 
