--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
 argh==0.25.0
+bleach==3.1.0
 certifi==2018.11.29
 chardet==3.0.4
+docutils==0.14
 Flask==0.10.1
 idna==2.8
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 pathtools==0.1.2
+pkginfo==1.5.0.1
+psycopg2-binary==2.7.7
+Pygments==2.3.1
 PyYAML==3.11
+readme-renderer==24.0
 requests==2.21.0
+requests-toolbelt==0.9.1
 robotframework==3.1.1
 robotframework-requests==0.5.0
 robotframework-seleniumlibrary==3.3.1
 selenium==3.141.0
+six==1.12.0
 SQLAlchemy==1.2.18
 tornado==5.1.1
+tqdm==4.31.1
+twine==1.13.0
 urllib3==1.24.1
 watchdog==0.8.0
+webencodings==0.5.1
 Werkzeug==0.9.6
